# whetstone

./: .env.example  .gitignore  .lighthouserc.json  .prettierignore  .size-limit.json  AGENTS.md  AGENT_TEAM_RESEARCH.md  BACKLOG.md  COWORK.md  DRAFT.md  ENGINEERING.md  GUIDELINES.md  PRODUCT.md  README.md  RESEARCH.md  REVIEW_NOTES.md  REVIEW_SPEC.md  STABLE.md  TEST_PLAN.md  WIREFRAMES.md  drizzle.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stryker.conf.mjs  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.setup.ts  vitest.stryker.config.ts
.claude/: approved-deps.txt  settings.json
.github/: copilot-instructions.md  pull_request_template.md
decisions/: 0001-stack-and-storage.md  0002-engineering-principles.md  0004-pause-mechanism.md  0005-revisit-direction-mirror.md  0006-voice-first-class.md  0007-five-role-cowork.md  0008-system-architecture.md  0009-review-spec.md  0010-audio-sync.md  0011-content-as-server-data.md  0012-admin-role.md  0013-daily-routine-semantics.md
docs/: 00-philosophy.md  01-scope-v1.md  02-stack.md  03-data-model.md  04-routine-algorithm.md  05-engineering-principles.md  06-methodology.md  COACH.md  DECISIONS.md  DEPLOY.md  LOCAL_AGENT_WORKFLOW.md  MAP.md  MCP.md  QUICK_START.md  SPEECH.md  agent-status.example.json
e2e/: fixtures.ts  globalSetup.ts  (+4 more)
scripts/setup/whisper-wrapper/: .gitignore  pyproject.toml
scripts/setup/whisper-wrapper/tests/: test_cli.py  test_fetch.py  test_locate.py
scripts/setup/whisper-wrapper/whetstone_whisper/: __init__.py  cli.py  fetch.py  locate.py
(+498 files in other folders)
